fixed pip, forgot to add relative positioning to container, was broken on wider screens

--- a/src/components/HeadToHeadCard/HeadToHeadCard.module.css
+++ b/src/components/HeadToHeadCard/HeadToHeadCard.module.css
@@ -2,6 +2,7 @@
   margin: 0 0 3.2rem 0;
 }
 .header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,5 +35,5 @@
 }
 .pip {
   position: absolute;
-  right: 5.2rem;
+  right: 3.5rem;
 }
